--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.bg-primary {
+    background-color: #f75d34 !important;
+}
+.border-primary{
+    border-color: #f75d34 !important;
+}
+.text-primary{
+    color: #f75d34 !important;
+}
